tests/parser/logical-and-error.stderr
error: expected expression
 --> $DIR/logical-and-error.lox:1:10
  |
1 | true and /;
  |          ^
